%% Service Blueprint ERD
%% Source of truth: supabase/migrations/ (consolidated template schema 20260716200000
%%   + derived layer 20260729120000/20260730090000/20260803001000
%%   + authoring foundation/operations + optional tier recipe 20260818*).
%% Enums: scenarios.layout ∈ (stacked | merged) — what the scenario opens as; the header toggle writes it
%%        paths.kind ∈ (happy | variant | exception)
%%        cells.status ∈ (proposed | planned | built | live | at_risk | deprecated)
%%        paths.status ∈ (proposed | planned | built | live | at_risk | deprecated)
%%          — both on the entity_status domain, one vocabulary; default live
%%        stakeholders.kind ∈ (recipient | staff | partner | provider | team)
%%        origin (structure tables) ∈ (import | app); slices.authorship ∈ (generated | customized | human)
%%        cell_dependencies.kind ∈ (leads_to | enables); resources.kind ∈ (link | attachment)
%%        cell_touchpoints.role ∈ (core | peripheral) — null means nobody has judged the placement
%%        touchpoints.kind ∈ (app | document | physical | channel | service | other)
%%        slices.kind ∈ (journey | step | lane | cell | custom)
%%        audit_findings.source ∈ (audit | whatif | import-sweep); severity ∈ (info | warn | critical);
%%          status ∈ (open | resolved | dismissed)
%%        evidence.kind ∈ (interview | survey | analytics | doc | meeting | decision | observation | other)
%%        authoring_changes.author ∈ (human | agent)
%%        authoring_changes.deleted_kind ∈ (scenario | path | lane | step | cell)
%% Integrity: cells.path_id must match lanes.path_id AND (path_id, step_id) must exist in
%%            path_steps (DB trigger cells_validate_path_match). Import order:
%%            paths → steps → path_steps → lanes → cells → cell_dependencies.
%% Roles: lanes.lane_role — semantic role key separate from the display name. Closed set
%%            (CHECK): customer_actions, frontstage_actions, backstage_actions,
%%            frontstage_touchpoints, backstage_touchpoints, support_actions, partner_actions,
%%            storyboard; null = generic swimlane (custom roles are no longer allowed).
%% Derived layer: slices/audit_findings/evidence reference cells SOFTLY (uuid / uuid[] with paired
%%            cell_keys, no FK) — scenario re-import deletes and recreates cells; the authored
%%            cell_key is the identity that survives. A cell with zero evidence rows is an
%%            ASSUMPTION (derived state, never stored). evidence_counts (view) exposes
%%            cell_id → count publicly without content.
%% Writes: structural shape goes through SECURITY DEFINER RPCs only (create/duplicate/rename/
%%            delete operations). Every authoring write is recorded in authoring_changes —
%%            the client appends through record_authoring_change, and the delete RPCs append
%%            their own row carrying the full payload, in the same transaction as the cascade.
%%            trash (view) is the deletions in that log, in the shape the retired
%%            deleted_structure table had. Every write RPC asserts is_service_account() in-body
%%            (default true; the optional tier recipe swaps in a JWT app_metadata check).
erDiagram
  services ||--o{ phases : "has many"
  phases ||--o{ scenarios : "has many"
  phases |o--o| phases : "loops_to_phase_id"
  scenarios ||--o{ paths : "has many"
  scenarios ||--o{ steps : "has many"
  paths ||--o{ path_steps : "has many"
  steps ||--o{ path_steps : "has many"
  paths ||--o{ lanes : "has many"
  paths ||--o{ cells : "has many"
  lanes ||--o{ cells : "has many"
  stakeholders |o--o{ lanes : "names its actor"
  stakeholders |o--o{ touchpoints : "owns"
  steps ||--o{ cells : "has many"
  cells ||--o{ cell_dependencies : "source"
  cells ||--o{ cell_dependencies : "target"
  touchpoints ||--o{ cell_touchpoints : "placed as"
  cells ||--o{ cell_touchpoints : "places"
  cells ||--o{ resources : "points at"
  cell_touchpoints ||--o{ resources : "points at"
  services ||--o{ slices : "has many"
  slices ||--o{ slides : "has many"
  slides ||--o{ slide_images : "shows"
  cells ||--o{ slide_images : "frame for"
  services ||--o{ audit_findings : "has many"
  services ||--o{ evidence : "has many"
  services ||--o| business_models : "has 0..1"

  services {
    uuid id PK
    text name
    text summary
    jsonb entity_examples
    timestamptz created_at
    timestamptz updated_at
  }

  phases {
    uuid id PK
    uuid service_id FK
    text name
    text summary
    int position
    uuid loops_to_phase_id FK "optional self-reference"
    text business_impact "spec: opex, NPS, brand, retention, growth"
    text operational_requirements "spec: process / system / people / legal"
    text origin "import | app"
  }

  scenarios {
    uuid id PK
    uuid phase_id FK
    text name
    text summary
    text note "the aside beside the summary — most often what else may run at the same time; held once here rather than copied onto each path"
    int position
    text layout "stacked | merged — what the scenario opens as"
    text origin "import | app"
  }

  paths {
    uuid id PK
    uuid scenario_id FK
    text name
    text summary
    text note "optional, e.g. parallel-scenario context"
    text kind "happy | variant | exception"
    text status "entity_status domain; default live"
    text origin "import | app"
  }

  steps {
    uuid id PK
    uuid scenario_id FK "columns are scenario-scoped, shared across paths"
    text name
    text summary "what this moment is, across every lane — the storyboard caption"
    text origin "import | app"
  }

  path_steps {
    uuid path_id PK, FK
    uuid step_id PK, FK
    int position "unique per (path_id, position), deferrable"
  }

  lanes {
    uuid id PK
    uuid path_id FK
    text name "display label - free-form, any language"
    text lane_role "semantic role key; null = generic swimlane"
    int position
    text owner_team "spec: team that staffs/owns this lane"
    jsonb kpis "string array: metrics the lane team is measured on"
    jsonb tools "string array: systems/tools the lane actors use"
    uuid stakeholder_id FK "the actor whose work this lane holds; null = a structural lane names nobody; on delete set null"
    text origin "import | app"
  }

  cells {
    uuid id PK
    uuid path_id FK
    uuid lane_id FK "unique (lane_id, step_id, position)"
    uuid step_id FK
    int position "ordering within one (lane, step) slot; 0 default"
    text content "Cell Label - primary grid text"
    text frame "one image for one cell; a step's frames across the lanes are its strip"
    text summary "optional detail-panel text"
    text function "spec: role/responsibility/requirements"
    text form "spec: communication/look/feel/sound"
    jsonb value_props "array of {for, value}"
    text owner "actual owning team/party"
    text perceived_owner "who the customer believes owns this moment"
    text cell_key "authored IR key; unique when set; null = not recoverable"
    text status "entity_status domain; default live"
    text origin "import | app"
  }

  touchpoints {
    uuid id PK
    text name "the identity — unique across the whole deployment; no service owns one (ADR 0003). The registry's spelling; placements match it case-insensitively"
    text kind "app | document | physical | channel | service | other"
    text summary "what this touchpoint IS, for the deployment"
    text url "where the touchpoint itself lives"
    text icon_url "a stable URL for its stock icon or logo; null draws nothing"
    text tone "the palette family its face is drawn in — the deployment's own choice; null means no preference and the renderer falls back deterministically. Deliberately unconstrained: the tone vocabulary belongs to the token model (ADR 0006)"
    text[] aliases "the other spellings that mean this row; null means none considered, which is why it is nullable where stakeholders.aliases is NOT NULL DEFAULT '{}'"
    uuid stakeholder_id FK "the actor who owns it, or null — nobody has said yet; on delete set null"
    text origin "import | app"
  }

  stakeholders {
    uuid id PK
    text name "the identity — unique across the whole deployment; no service owns one (ADR 0003)"
    text kind "recipient | staff | partner | provider | team"
    text summary "who this actor IS, for the deployment"
    text[] aliases "other spellings this blueprint used for the same actor"
    uuid part_of_id FK "the actor this one is part of; exactly one level — an actor that is part of something is part of nothing further"
  }

  cell_touchpoints {
    uuid id PK
    uuid cell_id FK "unique (cell_id, touchpoint_id); unique (cell_id, lower(name)) where name is set"
    uuid touchpoint_id FK "the registry entry, or null for a name-only placement"
    text name "set only when the registry lacks the touchpoint — exactly one of the two"
    int position "author order within the cell"
    text summary "prose about this touchpoint at THIS moment"
    text role "core | peripheral — or null, nobody has judged it; what it points at is in resources"
    text origin "import | app"
  }

  resources {
    uuid id PK
    uuid cell_id FK "always — every resource knows its cell"
    uuid cell_touchpoint_id FK "set as well when a placement owns it; (cell_touchpoint_id, cell_id) references the placement in its cell"
    text kind "link | attachment"
    text name "what the thing on the other end is called"
    text url "both kinds carry one"
    bool featured "the one its owner leads with; one featured attachment per owner"
    int position "author order within its owner"
    text origin "import | app"
  }

  cell_dependencies {
    uuid id PK
    uuid source_cell_id FK "unique (source, target, kind); source != target"
    uuid target_cell_id FK
    text kind "leads_to = drawn | enables = panel only; both source-first"
    text label "short edge label, e.g. a channel tag"
    text note "why-line shown in the panel dependencies tab"
  }

  slices {
    uuid id PK
    uuid service_id FK
    text kind "journey | step | lane | cell | custom"
    text title
    text summary
    text actor
    text locale "default en"
    text authorship "generated | customized | human"
    int position
    uuid created_by "auth.uid() at insert"
  }

  slides {
    uuid id PK
    uuid slice_id FK "unique (slice_id, position), deferrable"
    int position
    uuid[] cell_ids "SOFT refs to cells - no FK, survive re-import"
    text[] cell_keys "IR key-paths paired with cell_ids for recovery"
    text title
    text caption
    boolean shows_all_images "true = every cited cell frame"
    uuid created_by
  }

  slide_images {
    uuid id PK
    uuid slide_id FK "unique (slide_id, position)"
    int position
    uuid cell_id FK "exactly one of cell_id / image_url"
    text image_url
  }

  audit_findings {
    uuid id PK
    uuid service_id FK
    uuid run_id "audit-run identity; intentionally FK-less"
    text source "audit | whatif | import-sweep"
    text check_key
    text severity "info | warn | critical"
    uuid[] cell_ids "SOFT refs, paired with cell_keys"
    text[] cell_keys
    text summary
    text fingerprint "dedupe identity; unique per service while open"
    text status "open | resolved | dismissed; inserts must be open"
  }

  evidence {
    uuid id PK
    uuid service_id FK
    uuid cell_id "SOFT ref; exactly one of cell_id / proposition_question_key"
    text cell_key "paired with cell_id"
    text proposition_question_key "understand | value | usability"
    text kind "interview | survey | analytics | doc | ..."
    text title
    text note "a quotation, an observation, or a link"
    date observed_at "date-only by design"
    text added_by "agent name or participant-coded author"
    uuid created_by
  }

  business_models {
    uuid service_id PK, FK "one business-model record per service"
    text funding
    text pricing
    text delivery_cost
    text revenue_model
    text partners
  }

  authoring_changes {
    uuid id PK
    timestamptz at
    text author "human | agent"
    uuid author_id "auth.uid() at write"
    uuid agent_session_id "the agent conversation; set iff author = agent"
    text fn "the operation: an authoring RPC, or a direct-column mutation name"
    jsonb args "exactly what was sent, ids not names"
    jsonb revert "the captured inverse {fn, args}, where one exists"
    text deleted_kind "scenario | path | lane | step | cell; null unless a delete"
    text label "human name for the undo toast / recovery list"
    jsonb payload "every deleted row, natural-keyed, dependency order; set iff deleted_kind"
    jsonb affected_slices "[{slice_id, title, cell_keys}]"
  }
